--- a/html/main.html
+++ b/html/main.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
+        <link rel="stylesheet" href="../css/font.css">
         <link rel="stylesheet" href="../css/main.css">
     </head>
     <body>
-        
+        <h1>PROBANDO Fuente</h1>
     </body>
     <script src="../js/main.js"></script>
 </html>
